<resources>
    <string name="app_name">Lab6</string>
    <string name="sum">Sum</string>
    <string name="answer">Answer</string>
    <string name="firstNumber">Enter first number</string>
    <string name="secondNumber">Enter second number</string>
    <string name="changeColor">Change color</string>
    <string name="nextActivity">Next Activity</string>
    <string name="nextFragment">Next Fragment</string>
    <string name="thirdFragment">Third Fragment</string>
    <string name="list_activity">List of calculations</string>

    <string name="open_browser_call_activity">Open browser activity</string>
    <string name="open_service_activity">Open service activity</string>
    <string name="link" translatable="false">https://wikipedia.org/wiki</string>
    <string name="open_browser">Open browser</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="result">Result %d</string>
    <string name="service_started">Service started</string>
    <string name="service_stopped">Service stopped</string>

    <string name="log_file_name" translatable="false">logFile.txt</string>
    <string name="counted_to">Result = %d</string>
    <string name="show_file_content">File data</string>
    <string name="open_file_activity">Open file activity</string>
    <string name="open_shared_pref_activity" translatable="false">Shared preference</string>

    <string name="save_name" translatable="false">Save name</string>
    <string name="select_name" translatable="false">Select name</string>
    <string name="name_key" translatable="false">name</string>

    <array name="names">
        <item>Victor</item>
        <item>Aleksandr</item>
    </array>

    <string name="open_db_activity" translatable="false">open db</string>
    <string name="show_db_content" translatable="false">show db data</string>
    <string name="clear_db_content" translatable="false">clear db</string>

    <string name="open_anim_activity" translatable="false">Animation</string>

    <string name="alpha_scale" translatable="false">scale+alpha</string>
    <string name="rotate_translate" translatable="false">rotate+translate</string>

</resources>