<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/history_open"
        android:title="@string/list_activity" />
    <item
        android:id="@+id/service_item"
        android:title="@string/open_service_activity" />
    <item
        android:id="@+id/browser_call_item"
        android:title="@string/open_browser_call_activity" />
    <item
        android:id="@+id/file_item"
        android:title="@string/open_file_activity" />
    <item
        android:id="@+id/db_item"
        android:title="@string/open_db_activity" />
    <item
        android:id="@+id/shared_pref_item"
        android:title="@string/open_shared_pref_activity" />
    <item
        android:id="@+id/animation_item"
        android:title="@string/open_anim_activity" />
</menu>