<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FirstFragment">

    <Button
        android:id="@+id/sum"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/sum"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/answer"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/firstNumber"
        android:ems="10"
        android:hint="@string/firstNumber"
        android:inputType="number"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/secondNumber"
        android:ems="10"
        android:hint="@string/secondNumber"
        android:inputType="number"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp" />

</FrameLayout>